fix: add missing branch tag

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,8 +2,9 @@ name: Build & Push Docker Image
 
 on:
   push:
+    branches:
       - master
-  paths:
+    paths:
       - 'Dockerfile'
       - 'build.xml'
       - '.github/workflows/docker.yml'
