--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,14 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+target/
+*.jar
+*.war
+*.ear
+
+.DS_Store
+Thumbs.db
+
 ### STS ###
 .apt_generated
 .classpath
