--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
   </dependencyManagement>
 
   <dependencies>
+	  <dependency>
+    <groupId>org.eclipse.paho</groupId>
+    <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+    <version>1.2.5</version>
+    </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
