--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,13 @@
 spring.application.name=porotech-backend
-management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=*
 management.endpoint.health.probes.enabled=true
+
+jwt.secret=InSecureSteineBeisser
+jwt.expiration-ms=3600000
+
+spring.datasource.url=jdbc:h2:mem:porotechdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
