--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
     <version>1.2.5</version>
     </dependency>
     <dependency>
+      <groupId>com.fazecast</groupId>
+      <artifactId>jSerialComm</artifactId>
+      <version>[2.0.0,3.0.0)</version>
+    </dependency>
+    <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
       <scope>test</scope>
