feat: add postgresql with user table

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,17 @@ management.endpoint.health.probes.enabled=true
 
 jwt.secret=InSecureSteineBeisser
 jwt.expiration-ms=3600000
+# DataSource configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/porocar
+spring.datasource.username=porocar
+spring.datasource.password=secret
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.datasource.url=jdbc:h2:mem:porotechdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
+# JPA / Hibernate configuration
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+
+# Flyway migration configuration
+spring.flyway.enabled=false
+spring.flyway.locations=classpath:db/migration
