--- a/.github/workflows/java-maven.yml
+++ b/.github/workflows/java-maven.yml
@@ -18,12 +18,14 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+    runs-on: ${{ matrix.os }}
     env:
       MAVEN_OPTS: "-Xmx2g"
-
     steps:
-      - name: Checkout source
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Set up JDK 21
@@ -40,14 +42,13 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-m2-
 
-      - name: Build with Maven Wrapper
-        run: ./mvnw clean package --batch-mode --show-version
-
-      - name: Run tests
-        run: ./mvnw test --batch-mode
+      - name: Build and Test
+        run: |
+          ./mvnw clean package --batch-mode --show-version
+          ./mvnw test --batch-mode
 
       - name: Upload JAR artifact
         uses: actions/upload-artifact@v4
         with:
-          name: backend-jar
+          name: backend-jar-${{ matrix.os }}
           path: target/*.jar
