feat: implement fly way

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,13 +12,12 @@ spring.datasource.password=secret
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 
-
 mqtt.broker=tcp://localhost:1883
 # JPA / Hibernate configuration
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 
 # Flyway migration configuration
-spring.flyway.enabled=false
+spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
