--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,8 @@ services:
     image: eclipse-mosquitto:2.0
     ports:
       - "1883:1883"
-      - "9001:9001"
+    volumes:
+      - ./mosquitto.conf:/mosquitto/config/mosquitto.conf
 
   # Optional: Redis für caching
   redis:
