--- a/.github/workflows/java-maven.yml
+++ b/.github/workflows/java-maven.yml
@@ -22,11 +22,29 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
     runs-on: ${{ matrix.os }}
+    services:
+      postgres:
+        image: postgres:15
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_USER: porocar
+          POSTGRES_PASSWORD: porocar
+          POSTGRES_DB: secret
+        options: >-
+          --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     env:
       MAVEN_OPTS: "-Xmx2g"
+      SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/porocar
+      SPRING_DATASOURCE_USERNAME: porocar
+      SPRING_DATASOURCE_PASSWORD: secret
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Wait for Postgres
+        run: |
+          for i in {1..10}; do pg_isready -h localhost -p 5432 && break || sleep 1; done
 
       - name: Set up JDK 21
         uses: actions/setup-java@v4
