--- a/.actrc
+++ b/.actrc
@@ -1,2 +1,3 @@
 -P sdp-im887-imali=ghcr.io/catthehacker/ubuntu:act-20.04
 --container-architecture linux/amd64
+--container-options "--volume $(pwd)/.act/cache:/root/.m2"
