--- a/.github/workflows/java-maven.yml
+++ b/.github/workflows/java-maven.yml
@@ -34,6 +34,7 @@ jobs:
       - name: Wait for Postgres
         run: |
           for i in {1..10}; do pg_isready -h localhost -p 5432 && break || sleep 1; done
+        shell: bash
 
       - name: Set up JDK 21
         uses: actions/setup-java@v4
