--- a/.github/workflows/java-maven.yml
+++ b/.github/workflows/java-maven.yml
@@ -18,9 +18,23 @@ on:
 
 jobs:
   build:
+    services:
+      postgres:
+        image: postgres:15-alpine
+        env:
+          POSTGRES_DB: porocar
+          POSTGRES_USER: porocar
+          POSTGRES_PASSWORD: secret
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd "pg_isready -U porocar -h localhost -p 5432"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 10
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     env:
       MAVEN_OPTS: "-Xmx2g"
@@ -30,11 +44,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Wait for Postgres
-        run: |
-          for i in {1..10}; do pg_isready -h localhost -p 5432 && break || sleep 1; done
-        shell: bash
 
       - name: Set up JDK 21
         uses: actions/setup-java@v4
